--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap');
-.container{
+.body{
     background-color: azure;
     margin: 0;
     padding: 0;
